// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayFieldset renders layout correctly 1`] = `
<fieldset
  class="widget--array css-307ito"
>
  <div
    class="css-1nkdwiq"
  >
    <div>
      Child Content
    </div>
  </div>
</fieldset>
`;

exports[`ArrayFieldset renders layout correctly 2`] = `
<fieldset
  class="widget--array css-307ito"
>
  <div
    class="css-lmvsmr"
  >
    <div>
      <span
        class="chakra-heading css-18rxxth"
      >
        Test Label
      </span>
    </div>
  </div>
  <div
    class="css-1nkdwiq"
  >
    <div>
      Child Content
    </div>
  </div>
</fieldset>
`;

exports[`ArrayFieldset renders layout correctly 3`] = `
<fieldset
  class="widget--array css-307ito"
>
  <div
    class="css-lmvsmr"
  >
    <div>
      <span
        class="chakra-heading css-18rxxth"
      >
        Test Label
      </span>
    </div>
  </div>
  <div
    class="css-1nkdwiq"
  >
    <div>
      Child Content
    </div>
  </div>
  <div
    class="css-1h7ak4u"
  >
    <button
      aria-label="Add item"
      class="chakra-button css-17zd4y0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="chakra-icon css-1yg50w4"
        focusable="false"
        role="img"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v16H0z"
          fill="none"
        />
        <path
          d="M14 7H9V2H7v5H2v2h5v5h2V9h5z"
        />
      </svg>
      Add another
    </button>
  </div>
</fieldset>
`;

exports[`ArrayFieldset renders layout correctly 4`] = `
<fieldset
  class="widget--array css-307ito"
>
  <div
    class="css-lmvsmr"
  >
    <div>
      <span
        class="chakra-heading css-18rxxth"
      >
        Test Label
      </span>
    </div>
    <div>
      <button
        aria-label="Remove item"
        class="chakra-button css-15coqsv"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-1yg50w4"
          focusable="false"
          role="img"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h16v16H0z"
            fill="none"
          />
          <path
            d="M11 5h2v8.5c0 .825-.675 1.5-1.5 1.5h-7c-.825 0-1.5-.675-1.5-1.5V5h2v8h2V5h2v8h2zM2 2h12v2H2zm4-2h4v1H6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="css-1nkdwiq"
  >
    <div>
      Child Content
    </div>
  </div>
  <div
    class="css-1h7ak4u"
  >
    <button
      aria-label="Add item"
      class="chakra-button css-17zd4y0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="chakra-icon css-1yg50w4"
        focusable="false"
        role="img"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v16H0z"
          fill="none"
        />
        <path
          d="M14 7H9V2H7v5H2v2h5v5h2V9h5z"
        />
      </svg>
      Add another
    </button>
  </div>
</fieldset>
`;

exports[`ArrayFieldset renders layout correctly 5`] = `
<fieldset
  class="widget--array css-307ito"
>
  <div
    class="css-lmvsmr"
  >
    <div>
      <span
        class="chakra-heading css-18rxxth"
      >
        Test Label
        <span
          aria-hidden="true"
          class="css-ai0irq"
          role="presentation"
        >
          *
        </span>
      </span>
    </div>
    <div>
      <button
        aria-label="Remove item"
        class="chakra-button css-15coqsv"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="chakra-icon css-1yg50w4"
          focusable="false"
          role="img"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h16v16H0z"
            fill="none"
          />
          <path
            d="M11 5h2v8.5c0 .825-.675 1.5-1.5 1.5h-7c-.825 0-1.5-.675-1.5-1.5V5h2v8h2V5h2v8h2zM2 2h12v2H2zm4-2h4v1H6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="css-1nkdwiq"
  >
    <div>
      Child Content
    </div>
  </div>
  <div
    class="css-1h7ak4u"
  >
    <button
      aria-label="Add item"
      class="chakra-button css-17zd4y0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="chakra-icon css-1yg50w4"
        focusable="false"
        role="img"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h16v16H0z"
          fill="none"
        />
        <path
          d="M14 7H9V2H7v5H2v2h5v5h2V9h5z"
        />
      </svg>
      Add another
    </button>
  </div>
</fieldset>
`;
